--- a/index.html
+++ b/index.html
@@ -27,7 +27,23 @@
                 </div>
             </div>
         </header>
-    
+
+        <!--Adding Navbar,responsive behavior to Navbar, collapse and navbar-collapse and id of data-target-->
+        <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+            <div class="container">
+            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#nucampNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="nucampNavbar">   
+                <ul class="navbar-nav">
+                    <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="aboutus.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Sites</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+    <!--Added d-none d-sm-block to the three (p) elements to hide on xs veiwport  -->
         <div class="container">
             <div class="row row-content align-items-center">
                 <div class="col-sm-4 order-sm-last col-md-3">
