--- a/index.html
+++ b/index.html
@@ -47,13 +47,10 @@
             </button>
             <div class="collapse navbar-collapse" id="nucampNavbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-home fa-lg"></i> Home</a>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="aboutus.html"><i
-                                class="fa fa-info fa-lg"></i>About</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-home fa-lg"></i> Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="aboutus.html"><i class="fa fa-info fa-lg"></i>About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Sites</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contactus.html"><i
-                                class="fa fa-address-card fa-lg"></i> Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -120,9 +117,9 @@
 
                         <form id="reserveForm">
                             <div class="form-group row">
-                                <label for="Number of Campers" class="col-sm-6 col-form-label">Number of Campers</label>
-                                <div class="col-sm-6">
-                                    <select class="form-control" id="numCampers">
+                                <label for="Number of Campers" class="col-sm-6 col-form-label" >Number of Campers</label>
+                                <div class="col col-sm-6">
+                                    <select name="NumCampers form-control" id="NumCampers" class="form-control">
                                         <option selected>Select...</option>
                                         <option>1</option>
                                         <option>2</option>
@@ -135,7 +132,7 @@
                             </div>
                             <div class="form-group row">
                                 <label for="Date" class="col-sm-6 col-form-label">Date</label>
-                                <div class="col-sm-6">
+                                <div class=" col col-sm-6">
                                     <input type="date" class="form-control" id="date" name="date" placeholder="date" />
                                 </div>
                             </div>
