--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 </div>
             </div>
         </div>
-    </div>    
+        
 
         <div class="row row-content align-items-center">
             <div class="col-sm-4 col-md-3">
@@ -209,7 +209,7 @@
                             <div class="form-group row">
                                 <label for="numCampers" class="col-sm-6 col-form-label" >Number of Campers</label>
                                 <!--Select Dropdown-->
-                                <div class="col">
+                                <div class="col-sm-6">
                                     <select id="numCampers" class="form-control">
                                         <option selected>Select...</option>
                                         <option>1</option>
@@ -224,7 +224,7 @@
                             <!--Date-->
                             <div class="form-group row">
                                 <label for="Date" class="col-sm-6 col-form-label">Date</label>
-                                <div class="col">
+                                <div class="col-sm-6">
                                     <input type="date" class="form-control" id="date" name="date" placeholder="date" />
                                 </div>
                             </div>
