fix the word class for search button

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <!--Search button-->
                         <div class="form-group row">
                             <div class="col">                                           <!--added cancel button right next to submit button-->
-                                <button type="cancel" class="btn btn-secondary">Cancel</button> <button type="submit" lass="btn btn-primary">Search</button>
+                                <button type="cancel" class="btn btn-secondary">Cancel</button> <button type="submit" class="btn btn-primary">Search</button>
                             </div>
                         </div>
 
